fix vertical misalign of buttons due to descr height difference

--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,8 @@ body {
 }
 
 .panel-descr {
-    padding: 10px 25px;
+    float: left; /* fix vertical misalign */
+    padding: 5px 25px;
     margin-left: 128px;
     font-family: Georgia, serif;
     font-style: italic;
